Fixed scroll bars and increased gap between pic and name

--- a/source/static/styles/main-style.css
+++ b/source/static/styles/main-style.css
@@ -21,6 +21,10 @@
   scroll-behavior: smooth;
 }
 
+h1, h2, h3 {
+  overflow: hidden;
+}
+
 .home, .members, .member {
   display: flex;
   align-items: center;
@@ -67,6 +71,7 @@
 
 .member {
   flex-direction: column;
+  gap: 10px;
   background-color: var(--light-base-clr);
   border-radius: 10px;
   padding: 20px;
